grails-app/assets/stylesheets/mergedProfilesThemeColour.scss
/* ... */
.embedded-sandbox .bar {
  float: left;
  width: 0;
  height: 100%;
  font-size: 12px;
  line-height: 20px;
  color: #fff;
  text-align: center;
  background-color: #337ab7;
  -webkit-box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
  box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .15);
  -webkit-transition: width .6s ease;
  -o-transition: width .6s ease;
  transition: width .6s ease;
}

.embedded-sandbox .btn {
  background-color: #fff;
}

.embedded-sandbox h2 {
  border-bottom: inherit;
  font-size: 24px;
  font-weight: 700;
  line-height: 1.25;
  margin-bottom: .2em;
  margin-top: 1.875em;
  text-transform: none;
}

.embedded-sandbox .fileupload .input-append {
  padding-bottom: 20px;
}

.clickable {
  cursor: pointer;
}

.center-content {
  display:flex;
  justify-content:center;
  align-items:center;
}

.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
  -webkit-user-select: none;   /* Chrome/Safari/Opera */
  -khtml-user-select: none;    /* Konqueror */
  -moz-user-select: none;      /* Firefox */
  -ms-user-select: none;       /* Internet Explorer/Edge */
  user-select: none;           /* Non-prefixed version, currently
                                  not supported by any browser */
}

#multimediaPanelBody small{
  font-size: 10.5px;
}

#multimediaPanelBody  ul {
  padding-left: 0px;
}

.raw-embedded-content {
  overflow-x: auto;
}

/* XXX hacks to enable single line rich text, fragile if ckeditor structure changes */
textarea[ckeditor='richTextSingleLine'] + .cke .cke_wysiwyg_div {
  height: auto;
  padding: 6px 12px;
}

.search-buttons-responsive-large-screen {
  display: none;
}

.banner-wrapper {
  margin-bottom: 1em;


  .banner {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;

    &::before {
      -webkit-box-flex: 0;
      -ms-flex: 0 0 0;
      flex: 0 0 0;
      content: "";
      align-self: stretch;
    }

    .banner-container {
      position: relative;

      -webkit-box-flex: 1;
      -ms-flex: 1 0 auto;
      flex: 1 0 auto;
      -ms-flex-item-align: stretch;
      -ms-grid-row-align: stretch;
      align-self: stretch;


      .bg-item {
        position: absolute;

        background-size: cover;
        background-position: center center;
        background-repeat: no-repeat;

        top: 0;
        left: 0;
        bottom: 0;
        right: 0;
        z-index: -1;
      }

      .banner-gradient {

        .banner-logo-container {
          width: 100%;
          padding: 3em 15px;
          display: -webkit-box;
          display: -ms-flexbox;
          display: flex;
          -webkit-box-orient: horizontal;
          -webkit-box-direction: normal;
          -ms-flex-direction: row;
          flex-direction: row;

          .banner-logo-title {
            font-family: 'Raleway', sans-serif;
            font-size: 2em;
            align-self: center;
            text-transform: uppercase;
          }
        }
      }
    }
  }
}


/**
 * colour.css
 ***/

.show-grid [class*="col-"] {
  background-color: blue;
}

a:hover, a:focus {
  text-decoration: none;
}

h4, h5, h6 {
  color: black;
}

.btn-mini {
  background-color: #fff;
}

.btn-primary {
  color: #FFFFFF;
}

.btn-default:hover {
  font-weight: bold;
}

.nav-tabs > li.active > a {
  border: 1px solid;
  border-bottom-color: transparent;
}

.nav-tabs {
  border-bottom: 1px solid;
}

.pagination > li > a, .pagination > li > span {
  background-color: #fff;
  border: 1px solid;
}

.pagination > .active > a, .pagination > .active > span, .pagination > .active > a:hover, .pagination > .active > span:hover, .pagination > .active > a:focus, .pagination > .active > span:focus {
  color: #fff;
}

.pagination > .disabled > span, .pagination > .disabled > span:hover, .pagination > .disabled > span:focus, .pagination > .disabled > a, .pagination > .disabled > a:hover, .pagination > .disabled > a:focus {
  color: #777;
  background-color: #fff;
}

.pagination > li > a:hover, .pagination > li > span:hover, .pagination > li > a:focus, .pagination > li > span:focus {
  background-color: #eee;
}

footer p.lead {
  font-size: 24px;
}

.well, .panel {
  border-color: rgba(0, 135, 190, 0.2);
}

.panel-footer {
  border-color: rgba(0, 135, 190, 0.2);
}

.comments-panel .panel, .comments-panel .panel-heading {
  background-color: #F1F0F3 !important;
}


/* Media Queries (Mobile First Method = only add rules to modify larger views)
================================= */

/* Custom, iPhone Retina */
@media only screen and (min-width: 320px) {
}

@media (min-width: 426px) {
}

@media (min-width: 601px) {
  .search-buttons-responsive-large-screen {
    display: inline-block;
  }
  .search-buttons-responsive-small-screen {
    display: none;
  }
}

@media (min-width: 768px) {
  .customizable-logo-img {
    max-width: 275px;
    margin: 0;
  }
  .banner-wrapper {
    margin-bottom: 2em;

    .banner {
      &::before {
        -ms-flex-preferred-size: calc(50% - 375px);
        flex-basis: calc(50% - 375px);
      }
      .banner-container {

        .banner-gradient {

          .banner-logo-container {
            width: 750px;
            .banner-logo-title {
              font-size: 2.5em;
            }
          }
        }
      }
    }
  }
}
@media (min-width: 992px) {
  .banner-wrapper {
    margin-bottom: 3em;
    .banner {
      &::before {
        -ms-flex-preferred-size: calc(50% - 485px);
        flex-basis: calc(50% - 485px);
      }
      .banner-container {
        .banner-gradient {
          .banner-logo-container {
            width: 970px;
          }
        }
      }
    }
  }
}

@media (min-width: 1200px) {
  .banner-wrapper {
    .banner {
      &::before {
        -ms-flex-preferred-size: calc(50% - 585px);
        flex-basis: calc(50% - 585px);
      }
      .banner-container {
        .banner-gradient {
          .banner-logo-container {
            width: 1170px;
          }
        }
      }
    }
  }
}

